tests/pass/0040_shadowed_assignment_stays_in_inner_scope.ee
fn main() {
    let x = 1;
    {
        let x = 2;
        x = 3;
        debugPrint(x);
    }
    debugPrint(x);
}
