tests/fail/0017_comment_before_assignment_to_undeclared.ee
fn main() {
    // Assignment should still require an existing variable
    x = 3;
}
